test/errors/wav-open/wav-open.rom
Error in `wav-open.asm` on line 1: Could not open `wav-open.wav`
